<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_dolg"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/action_txt"
                        android:text="@string/action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        />
                    <Spinner
                        android:id="@+id/spinner_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/imnum"
                        android:spinnerMode="dialog"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    >
                    <TextView
                        android:id="@+id/purse_data"
                        android:text="@string/cash"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="#ff028102"
                        android:textStyle="bold"
                        android:background="#fff"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center"
                >
                <TextView
                    android:id="@+id/purse_txt"
                    android:text="@string/purse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"
                    />
                <Spinner
                    android:id="@+id/spinner_purse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/credit_txt"
                    android:text="@string/credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"/>
                <Spinner
                    android:id="@+id/spinner_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    />
                <TextView
                    android:id="@+id/credit_data"
                    android:text="@string/cash"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#ff028102"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutNewCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center"
                >
                <TextView
                    android:id="@+id/newcontact_txt"
                    android:text="@string/credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"/>
                <EditText
                    android:id="@+id/newcredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutOldContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center"
                >
                <TextView
                    android:id="@+id/oldcontact_txt"
                    android:text="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"/>
                <Spinner
                    android:id="@+id/spinner_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutnewContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/contact_txt"
                    android:text="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"/>
                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/sum_txt"
                    android:text="@string/sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"
                    />
                <EditText
                    android:id="@+id/sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutSumPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/sumpercent_txt"
                    android:text="@string/sumpercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"
                    />
                <EditText
                    android:id="@+id/sumpercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutOtherSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/othersum_txt"
                    android:text="@string/othersum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"
                    />
                <EditText
                    android:id="@+id/othersum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <TextView
                    android:id="@+id/comment_txt"
                    android:text="@string/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#fff"
                    />
                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">
                <Button
                    android:id="@+id/btn_ok"
                    android:text="@string/write"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>